--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -32,10 +32,10 @@ jobs:
           context: .
           push: true
           tags: nyamisty/dev:latest
-      -
-        name: Update repo description
-        uses: peter-evans/dockerhub-description@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: nyamisty/dev
+      #-
+      #  name: Update repo description
+      #  uses: peter-evans/dockerhub-description@v2
+      #  with:
+      #    username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #    password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      #    repository: nyamisty/dev
